@@ -189,7 +189,6 @@
   <block id="06ad314b340900d226b1196e1fe289e9" category="sidebar">Avvio rapido</block>
   <block id="9a11eb5da5d06e3593dc6b41553d97e5" category="sidebar">Impostare le autorizzazioni</block>
   <block id="4654b99a0535f374a8ff766873df50a6" category="sidebar">Creare o scoprire un ambiente di lavoro</block>
-  <block id="74e5a199ea27b8b415c0c77d75229e79" category="sidebar">NVMe e iSCSI host Configuration (Configurazione host iSCSI e NVMe)</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Conoscenza e supporto</block>
   <block id="813011e2103649bb71f124adedcc10ea" category="sidebar">Blog e community</block>
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">Community NetApp</block>
@@ -348,8 +347,6 @@
   <block id="c8df78ded4cea0598f7679f11a3c3246" category="list-text">Selezionare *Aggiungi manualmente*, quindi seguire i passaggi riportati di seguito per compilare le tre sezioni in _Configurazione autorizzazioni_.</block>
   <block id="ef7fe40c036b5b08d74837dcb702dc33" category="inline-image-macro">Una schermata che mostra gli elementi da definire manualmente per ogni set di credenziali.</block>
   <block id="083fb8583b0a2366ef9a94388dd9640f" category="paragraph"><block ref="083fb8583b0a2366ef9a94388dd9640f" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="d11861b4e2dfc9ac3d86245926aa2785" category="section-title">Fase 1: Selezionare le capacità del carico di lavoro e creare i criteri IAM</block>
-  <block id="530d81548274a062436af51b8c3e829f" category="paragraph">In questa sezione è possibile scegliere quali tipi di funzionalità del carico di lavoro saranno gestibili come parte di queste credenziali e le autorizzazioni abilitate per ogni carico di lavoro. Per creare le policy, dovrai copiare da Codebox le autorizzazioni delle policy per ogni carico di lavoro selezionato e aggiungerle ad AWS Management Console all'interno dell'account AWS.</block>
   <block id="445f4ba50fbc8e7b285aedb4396412bb" category="inline-image-macro">Uno screenshot che mostra quali tipi di funzionalità del carico di lavoro saranno gestibili come parte delle policy in queste credenziali.</block>
   <block id="0edc9a25423073fcc768405f6aeda88b" category="paragraph"><block ref="0edc9a25423073fcc768405f6aeda88b" category="inline-image-macro-rx" type="image"></block></block>
   <block id="eb73cd2a4bbc3dbb4bbab5f5a9b6fb8d" category="list-text">Nella sezione *Crea criteri*, abilitare ciascuna funzionalità del carico di lavoro che si desidera includere in queste credenziali. Abilitare *Storage* per creare e gestire file system.</block>
@@ -535,7 +532,6 @@
   <block id="cf9ae4b94802ab988b8884ed9bf12509" category="sidebar">Gestione di Amazon FSX per NetApp ONTAP con BlueXP </block>
   <block id="622ad6297367666ca450d994236cbc2d" category="paragraph">Se stai cercando l'opzione _Advanced view_, che ti consente di gestire un file system FSX per ONTAP utilizzando Gestione di sistema di ONTAP, ora puoi trovare questa opzione dall'area di lavoro di BlueXP  dopo aver selezionato l'ambiente di lavoro.</block>
   <block id="66cff4f3970f46872862ee60b7f0a832" category="paragraph"><block ref="66cff4f3970f46872862ee60b7f0a832" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="1de58d4f64d081fb97f1d591f6b96a7c" category="paragraph">Quando Aggiungi nuove credenziali per FSX per ONTAP dallo storage in una fabbrica di workload BlueXP , devi decidere in quale livello di permessi, o _modalità operativa_, vorresti operare. Per scoprire e implementare risorse AWS come FSX per ONTAP, avrai bisogno delle autorizzazioni _Read_ o _Automate_. BlueXP  FSX per ONTAP funzionerà in modalità _BASIC_ a meno che non si selezioni la modalità _Read_ o _Automate_. <block ref="d6d34839020cc53cd6cb3ac295769611" category="inline-link-macro-rx"></block>.</block>
   <block id="d8030aec0b616170c1d448f645629048" category="paragraph">Da BlueXP  Canvas, puoi creare e scoprire gli ambienti di lavoro FSX per ONTAP e utilizzare System Manager e altri servizi BlueXP . Se si desidera gestire gli ambienti di lavoro e i carichi di lavoro di FSX per ONTAP in esecuzione su Amazon FSX per NetApp ONTAP, utilizzare<block ref="809afc2f4cb79e608d46f9e3b3ede420" category="inline-link-rx"></block>.</block>
   <block id="080bf239eab90228128570c1dcff727d" category="inline-link-macro">Scopri come creare e scoprire gli ambienti di lavoro FSX per ONTAP in BlueXP </block>
   <block id="cb955ea4bb940d72f2e54584baf5cad0" category="paragraph"><block ref="245fb4ba49d4510f0ab7c36a85ac006b" category="inline-link-macro-rx"></block>.</block>
@@ -568,4 +564,18 @@
   <block id="fa7394842a17e21de2bb5eb52a3d97eb" category="paragraph">È possibile selezionare le unità di volume (GiB o TiB) quando si creano volumi in FSX per ONTAP.</block>
   <block id="25c675873bda3d8b54aac90e0f94b61a" category="paragraph">Ora puoi creare volumi CIFS in FSX per ONTAP usando Cloud Manager.</block>
   <block id="d3700b7f8295ad136939c888e0efdcee" category="paragraph">Ora puoi modificare FSX per ONTAP Volumes usando Cloud Manager.</block>
+  <block id="16e305f77c7a0272aceac8c95312d98a" category="doc">NetApp rilascia ulteriori risorse di CloudFormation</block>
+  <block id="c043b3439543ebfc027a3c1fcb5613a5" category="paragraph">NetApp ora fornisce risorse di CloudFormation che consentono ai clienti di utilizzare componenti ONTAP avanzati che non sono esposti all'interno della console AWS. CloudFormation è il meccanismo Infrastructure-as-code per AWS. Sarai in grado di creare relazioni di replica, CIFS share, policy di esportazione NFS, snapshot e altro ancora.</block>
+  <block id="01d4e72c68c36e8905e55eeb7f8aff0c" category="inline-link-macro">Gestisci i file system Amazon FSX per NetApp ONTAP utilizzando CloudFormation</block>
+  <block id="f883109f2802c104ac9ae2e21a56b762" category="paragraph"><block ref="f883109f2802c104ac9ae2e21a56b762" category="inline-link-macro-rx"></block></block>
+  <block id="c92644a757476bbef61fa3b782e32d95" category="paragraph">Quando Aggiungi nuove credenziali per FSX per ONTAP dallo storage in una fabbrica di workload BlueXP , devi decidere in quale livello di permessi, o _modalità operativa_, vorresti operare. Per scoprire e implementare risorse AWS come FSX per ONTAP, avrai bisogno delle autorizzazioni _Read_ o _Automate_. BlueXP  FSX per ONTAP funzionerà in modalità _BASIC_ a meno che non si selezioni la modalità _Read_ o _Automate_. _Read_ sono le stesse delle autorizzazioni di visualizzazione. _Automate_ sono le stesse delle autorizzazioni Operate. <block ref="d6d34839020cc53cd6cb3ac295769611" category="inline-link-macro-rx"></block>.</block>
+  <block id="facff49e2bd72676ffc323376c6f7c86" category="section-title">Passaggio 1: Selezionare la capacità di archiviazione e creare il criterio IAM</block>
+  <block id="643bb3986a2755c5582d9f82862ff934" category="paragraph">In questa sezione, è possibile scegliere la funzionalità di archiviazione da gestire come parte di queste credenziali e le autorizzazioni abilitate per l'archiviazione. Puoi anche selezionare altri workload come database, Genai o VMware. Una volta effettuate le selezioni, dovrai copiare le autorizzazioni delle policy per ogni carico di lavoro selezionato da Codebox e aggiungerle ad AWS Management Console all'interno dell'account AWS per creare le policy.</block>
+  <block id="45f2112a5aef07c91c1003cce4dc5410" category="paragraph">Le autorizzazioni di archiviazione possono anche essere copiate dalle seguenti schede.</block>
+  <block id="7a38975bfee632036d1205b2951258b2" category="open-title">Autorizzazioni di lettura</block>
+  <block id="79eecef4aff74983cfd4aed5da7f2f30" category="open-title">Automatizzare le autorizzazioni</block>
+  <block id="be0bf2e3af6b03378bb493466f3c335f" category="section-title">Gestire un file system utilizzando Amazon CloudFormation</block>
+  <block id="c2f7d57c8ea888af74a7d46699221837" category="paragraph">È possibile eseguire il provisioning e gestire le risorse del file system FSX per ONTAP (volumi, condivisioni CIFS, policy di esportazione e altro ancora) con Amazon CloudFormation.</block>
+  <block id="2c263d7a0f58593b73a60f40d9f5805e" category="paragraph"><block ref="2c263d7a0f58593b73a60f40d9f5805e" category="inline-link-macro-rx"></block></block>
+  <block id="13ac5039f81a1aa4ae7419bf17b5b6a0" category="section-title">06 gennaio 2025</block>
 </blocks>
