@@ -17,10 +17,10 @@ indexpage:
       url: "/use/task-creating-fsx-working-environment.html"
   - title: USA FSX per ONTAP
     links:
+    - title: Crea un file system FSX per ONTAP
+      url: "/use/task-creating-fsx-working-environment.html"
     - title: Gestire un file system FSX per ONTAP
       url: "/use/task-manage-working-environment.html"
-    - title: NVMe e iSCSI host Configuration (Configurazione host iSCSI e NVMe)
-      url: https://docs.netapp.com/us-en/ontap-sanhost/
   - title: Conoscenza e supporto
     links:
     - title: Registrati per ricevere assistenza
