@@ -34,6 +34,14 @@ image:screenshot-system-manager.png["Una schermata del pannello di destra in Blu
 
 
 
+== Gestire un file system utilizzando Amazon CloudFormation
+
+È possibile eseguire il provisioning e gestire le risorse del file system FSX per ONTAP (volumi, condivisioni CIFS, policy di esportazione e altro ancora) con Amazon CloudFormation.
+
+link:https://github.com/NetApp/NetApp-CloudFormation-FSx-ONTAP-provider[""]
+
+
+
 == Utilizza i servizi dati BlueXP  con un file system
 
 Utilizza i servizi dati BlueXP  con i tuoi file system FSX per ONTAP per eseguire il backup e il ripristino dei dati, trasferire e sincronizzare i dati, eseguire la scansione e classificare i dati, replicare i dati e accelerare l'accesso o l'offload del traffico.
